--- a/TraversalProject/Views/Newsletter/Newsletter.cshtml
+++ b/TraversalProject/Views/Newsletter/Newsletter.cshtml
@@ -6,7 +6,7 @@
             <input type="email" name="Mail" placeholder="Mail Adresiniz" required="">
             <button id="btnSubmit" type="submit">Abone Ol</button>
         </form>
-        <p>Spam mail göndermeden yeni tur rotalarını paylaşacağız.</p>
+      @*  <p>Spam mail göndermeden yeni tur rotalarını paylaşacağız.</p>*@
     </div>
 </div>
 
