--- a/TraversalProject/Views/Shared/Components/_MemberStatistic/Default.cshtml
+++ b/TraversalProject/Views/Shared/Components/_MemberStatistic/Default.cshtml
@@ -17,7 +17,7 @@
                 <h6>Geçmiş Rezervasyon Sayınız: @ViewBag.geçmişRezv</h6>
                 <h6>Onay Bekleyen Rezervasyon Sayınız: @ViewBag.onayBekleyenRezv</h6>
                 <h6>Toplam Yorum Sayınız: @ViewBag.totalComment</h6>
-                <h6>Toplam Bildirim Sayınız: @ViewBag.notificationComment</h6>
+                <h6>Toplam Bildirim Sayınız: @ViewBag.notificationCount</h6>
                 <h6>Toplam Rota Sayısı: @ViewBag.totalTour</h6>
                 <h6>Rehber Sayımız: @ViewBag.totalGuide</h6>
                 <h6>Toplam Misafir Sayımız: @ViewBag.totalMember</h6>
